--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd apps/web && pnpm run build",
-  "devCommand": "cd apps/web && pnpm run dev",
+  "buildCommand": "pnpm --filter web run build",
+  "devCommand": "pnpm --filter web run dev",
   "installCommand": "pnpm install",
   "framework": "nextjs",
   "outputDirectory": "apps/web/.next"
