--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,5 @@
   "buildCommand": "pnpm --filter web run build",
   "devCommand": "pnpm --filter web run dev",
   "installCommand": "pnpm install",
-  "framework": "nextjs",
-  "outputDirectory": "apps/web/.next"
+  "framework": null
 }
